HTML (label for) fix

--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
                   data-valid="true"
                 />
                 <i class="sign-up__form-icon-error" data-valid="true"></i>
-                <label
-                  for="first-name"
-                  class="sign-up__form-label-error"
-                  data-valid="true"
+                <label class="sign-up__form-label-error" data-valid="true"
                   >First Name cannot be empty</label
                 >
               </div>
@@ -65,10 +62,7 @@
                   data-valid="true"
                 />
                 <i class="sign-up__form-icon-error" data-valid="true"></i>
-                <label
-                  for="last-name"
-                  class="sign-up__form-label-error"
-                  data-valid="true"
+                <label class="sign-up__form-label-error" data-valid="true"
                   >Last Name cannot be empty</label
                 >
               </div>
@@ -81,10 +75,7 @@
                   data-valid="true"
                 />
                 <i class="sign-up__form-icon-error" data-valid="true"></i>
-                <label
-                  for="email"
-                  class="sign-up__form-label-error"
-                  data-valid="true"
+                <label class="sign-up__form-label-error" data-valid="true"
                   >Looks like this is not an email</label
                 >
               </div>
@@ -97,10 +88,7 @@
                   data-valid="true"
                 />
                 <i class="sign-up__form-icon-error" data-valid="true"></i>
-                <label
-                  for="password"
-                  class="sign-up__form-label-error"
-                  data-valid="true"
+                <label class="sign-up__form-label-error" data-valid="true"
                   >Password cannot be empty</label
                 >
               </div>
