--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   class="sign-up__form-input"
                   data-valid="true"
                 />
-                <i class="sign-up__form-icon-error" data-valid="true"></i>
+                <img src="images/icon-error.svg" title="This field cannot be empty!" alt="Error" class="sign-up__form-icon-error" data-valid="true"></img>
                 <label class="sign-up__form-label-error" data-valid="true"
                   >First Name cannot be empty</label
                 >
@@ -61,7 +61,7 @@
                   class="sign-up__form-input"
                   data-valid="true"
                 />
-                <i class="sign-up__form-icon-error" data-valid="true"></i>
+                <img src="images/icon-error.svg" title="This field cannot be empty!" alt="Error" class="sign-up__form-icon-error" data-valid="true"></img>
                 <label class="sign-up__form-label-error" data-valid="true"
                   >Last Name cannot be empty</label
                 >
@@ -74,7 +74,7 @@
                   class="sign-up__form-input"
                   data-valid="true"
                 />
-                <i class="sign-up__form-icon-error" data-valid="true"></i>
+                <img src="images/icon-error.svg" title="You have to provide valid e-mail address!" alt="Error" class="sign-up__form-icon-error" data-valid="true"></img>
                 <label class="sign-up__form-label-error" data-valid="true"
                   >Looks like this is not an email</label
                 >
@@ -87,7 +87,7 @@
                   class="sign-up__form-input"
                   data-valid="true"
                 />
-                <i class="sign-up__form-icon-error" data-valid="true"></i>
+                <img src="images/icon-error.svg" title="Input Password and Submit [6 to 20 characters which contain at least one numeric digit, one uppercase and one lowercase letter]" alt="Error" class="sign-up__form-icon-error" data-valid="true"></img>
                 <label class="sign-up__form-label-error" data-valid="true"
                   >Password cannot be empty</label
                 >
